# mike

./: .env.example  CLAUDE.md  EXTENDING.md  README.md  ROADMAP.md  install.sh  pyproject.toml
config/: settings.yaml
config/personas/: coder.md  creative.md  default.md  planner.md  researcher.md
docs/: ai_concepts.md  architecture.md  rag_techniques.md
memory/: entities.json  facts.md
mike/: __init__.py  assistant.py  cli.py
mike/auth/: __init__.py  claude.py  codex.py  db.py  dependencies.py  email_auth.py  email_service.py  middleware.py  models.py  oauth.py  security.py
mike/core/: __init__.py  agent.py  context_manager.py  fact_extractor.py  intent.py  ollama_client.py  orchestrator.py  permissions.py  router.py  sub_agent.py  tool_executor.py  tools.py
mike/integrations/: __init__.py  telegram_bot.py
mike/knowledge/: __init__.py  rag.py
mike/providers/: __init__.py  base.py  chutes.py  ollama.py  ollama_cloud.py
mike/skills/: __init__.py  calculator.py  datetime_ops.py  document_processor.py  file_ops.py  github_ops.py  media_gen.py  memory_ops.py  multi_model_analysis.py  notes.py  shell.py  skill_creator.py  telegram.py  weather.py  web_search.py
mike/ui/: __init__.py  app.py  diff.py  terminal.py
mike/voice/: __init__.py  voice_mode.py
tests/: test_agent_plan_mode.py  test_cli_commands.py  test_create_pr.py  test_permissions.py  test_terminal_ui.py
web/: index.html  package-lock.json
web/src/: App.tsx
web/src/components/auth/: LoginPage.tsx
web/src/components/camera/: DraggableCamera.tsx
web/src/components/chat/: EmptyState.tsx  MessageBubble.tsx  MessageList.tsx
web/src/components/dashboard/: DashboardView.tsx
web/src/components/input/: UnifiedInput.tsx
web/src/components/orb/: FloatingOrb.tsx  Orb.tsx
web/src/components/settings/: MemoryPanel.tsx  SettingsPanel.tsx
web/src/hooks/: useTheme.ts  useWakeWord.ts  useWebSocket.ts
web/src/lib/: utils.ts
web/src/types/: dashboard.ts  index.ts
